LuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Lua.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace lua_parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class LuaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, SPACE=56, NAME=57, NUMERAL=58, STR_LIT=59;
	public const int
		RULE_start = 0, RULE_nonaugmented_start = 1, RULE_nempty_list_of_stat = 2, 
		RULE_allow_empty_list_of_stat = 3, RULE_list_of_stat = 4, RULE_optional_retstat = 5, 
		RULE_block = 6, RULE_optional_semicol = 7, RULE_retstat = 8, RULE_nempty_list_of_elseif = 9, 
		RULE_allow_empty_list_of_elseif = 10, RULE_list_of_elseif = 11, RULE_optional_else = 12, 
		RULE_stat = 13, RULE_opt_assign_rhs = 14, RULE_range = 15, RULE_range_tail = 16, 
		RULE_elseif = 17, RULE_else__x_ = 18, RULE_exp = 19, RULE_binexp = 20, 
		RULE_binseq = 21, RULE_binoperand = 22, RULE_unaryexp = 23, RULE_exponent = 24, 
		RULE_prefixexp = 25, RULE_atom = 26, RULE_nonempty_seplist_of_comma_and_exp = 27, 
		RULE_allow_empty_o_nonempty_seplist_of_comma_and_exp_p_ = 28, RULE_seplist_o__i__s__i__s_exp_p_ = 29, 
		RULE_args = 30, RULE_opt_o__i_name_k__p_ = 31, RULE_opt_o_parlist_p_ = 32, 
		RULE_functiondef = 33, RULE_varargs = 34, RULE_nempty_seplist_of_comma_and_name = 35, 
		RULE_parlist = 36, RULE_nempty_fields = 37, RULE_allow_empty_fields = 38, 
		RULE_field_list = 39, RULE_optional_fieldsep = 40, RULE_tableconstructor = 41, 
		RULE_field = 42, RULE_fieldsep = 43, RULE_binop = 44;
	public static readonly string[] ruleNames = {
		"start", "nonaugmented_start", "nempty_list_of_stat", "allow_empty_list_of_stat", 
		"list_of_stat", "optional_retstat", "block", "optional_semicol", "retstat", 
		"nempty_list_of_elseif", "allow_empty_list_of_elseif", "list_of_elseif", 
		"optional_else", "stat", "opt_assign_rhs", "range", "range_tail", "elseif", 
		"else__x_", "exp", "binexp", "binseq", "binoperand", "unaryexp", "exponent", 
		"prefixexp", "atom", "nonempty_seplist_of_comma_and_exp", "allow_empty_o_nonempty_seplist_of_comma_and_exp_p_", 
		"seplist_o__i__s__i__s_exp_p_", "args", "opt_o__i_name_k__p_", "opt_o_parlist_p_", 
		"functiondef", "varargs", "nempty_seplist_of_comma_and_name", "parlist", 
		"nempty_fields", "allow_empty_fields", "field_list", "optional_fieldsep", 
		"tableconstructor", "field", "fieldsep", "binop"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'return'", "'='", "'::'", "'break'", "'goto'", "'do'", "'end'", 
		"'while'", "'repeat'", "'until'", "'if'", "'then'", "'for'", "'in'", "'local'", 
		"'function'", "'('", "')'", "','", "'elseif'", "'else'", "'#'", "'-'", 
		"'~'", "'not'", "'^'", "':'", "'['", "']'", "'.'", "'nil'", "'false'", 
		"'true'", "'...'", "'{'", "'}'", "'or'", "'and'", "'<'", "'>'", "'<='", 
		"'>='", "'~='", "'=='", "'|'", "'&'", "'<<'", "'>>'", "'..'", "'+'", "'*'", 
		"'/'", "'//'", "'%'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "SPACE", "NAME", "NUMERAL", 
		"STR_LIT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Lua.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LuaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LuaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LuaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		public block result;
		public Nonaugmented_startContext v;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LuaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Nonaugmented_startContext nonaugmented_start() {
			return GetRuleContext<Nonaugmented_startContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			_localctx.v = nonaugmented_start();
			State = 91;
			Match(Eof);
			 _localctx.result =  _localctx.v.result; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Nonaugmented_startContext : ParserRuleContext {
		public block result;
		public BlockContext var_0__1;
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public Nonaugmented_startContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nonaugmented_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterNonaugmented_start(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitNonaugmented_start(this);
		}
	}

	[RuleVersion(0)]
	public Nonaugmented_startContext nonaugmented_start() {
		Nonaugmented_startContext _localctx = new Nonaugmented_startContext(Context, State);
		EnterRule(_localctx, 2, RULE_nonaugmented_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			_localctx.var_0__1 = block();
			  _localctx.result =  _localctx.var_0__1.result; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Nempty_list_of_statContext : ParserRuleContext {
		public List<stmt> result;
		public Nempty_list_of_statContext var_1__1;
		public StatContext var_0__1;
		public StatContext var_1__2;
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Nempty_list_of_statContext nempty_list_of_stat() {
			return GetRuleContext<Nempty_list_of_statContext>(0);
		}
		public Nempty_list_of_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nempty_list_of_stat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterNempty_list_of_stat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitNempty_list_of_stat(this);
		}
	}

	[RuleVersion(0)]
	public Nempty_list_of_statContext nempty_list_of_stat() {
		return nempty_list_of_stat(0);
	}

	private Nempty_list_of_statContext nempty_list_of_stat(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Nempty_list_of_statContext _localctx = new Nempty_list_of_statContext(Context, _parentState);
		Nempty_list_of_statContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_nempty_list_of_stat, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 98;
			_localctx.var_0__1 = stat();
			  _localctx.result =  new List<stmt> { _localctx.var_0__1.result }; 
			}
			Context.Stop = TokenStream.LT(-1);
			State = 107;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Nempty_list_of_statContext(_parentctx, _parentState);
					_localctx.var_1__1 = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_nempty_list_of_stat);
					State = 101;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 102;
					_localctx.var_1__2 = stat();
					 
					                          _localctx.result =  appendList<stmt>(_localctx.var_1__1.result, _localctx.var_1__2.result);
					                      
					}
					} 
				}
				State = 109;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Allow_empty_list_of_statContext : ParserRuleContext {
		public List<stmt> result;
		public Nempty_list_of_statContext var_1__1;
		[System.Diagnostics.DebuggerNonUserCode] public Nempty_list_of_statContext nempty_list_of_stat() {
			return GetRuleContext<Nempty_list_of_statContext>(0);
		}
		public Allow_empty_list_of_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_allow_empty_list_of_stat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterAllow_empty_list_of_stat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitAllow_empty_list_of_stat(this);
		}
	}

	[RuleVersion(0)]
	public Allow_empty_list_of_statContext allow_empty_list_of_stat() {
		Allow_empty_list_of_statContext _localctx = new Allow_empty_list_of_statContext(Context, State);
		EnterRule(_localctx, 6, RULE_allow_empty_list_of_stat);
		try {
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				 
				                _localctx.result =  new List<stmt> {  };
				            
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 111;
				_localctx.var_1__1 = nempty_list_of_stat(0);
				 
				                _localctx.result =  _localctx.var_1__1.result;
				            
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_of_statContext : ParserRuleContext {
		public List<stmt> result;
		public Allow_empty_list_of_statContext var_0__1;
		[System.Diagnostics.DebuggerNonUserCode] public Allow_empty_list_of_statContext allow_empty_list_of_stat() {
			return GetRuleContext<Allow_empty_list_of_statContext>(0);
		}
		public List_of_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_of_stat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterList_of_stat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitList_of_stat(this);
		}
	}

	[RuleVersion(0)]
	public List_of_statContext list_of_stat() {
		List_of_statContext _localctx = new List_of_statContext(Context, State);
		EnterRule(_localctx, 8, RULE_list_of_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
